--- a/Student4Life/AndroidManifest.xml
+++ b/Student4Life/AndroidManifest.xml
@@ -5,6 +5,9 @@
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="10" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN">
+    </uses-permission>
 
     <application
         android:icon="@drawable/ic_launcher"
@@ -19,5 +22,6 @@
             </intent-filter>
         </activity>
     </application>
+
 
 </manifest>
