napravljen splash i meni u manifestu deklarirati <activity             android:name=".TextCommand"             android:label="@string/app_name" >         </activity>

--- a/Student4Life/AndroidManifest.xml
+++ b/Student4Life/AndroidManifest.xml
@@ -13,12 +13,21 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:name=".Student4LifeActivity"
+            android:name=".Splash"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".OurMenu"
+            android:label="Izbornik" >
+            <intent-filter>
+                <action android:name="com.student.app.MENU" />
+
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
