--- a/Student4Life/AndroidManifest.xml
+++ b/Student4Life/AndroidManifest.xml
@@ -8,10 +8,12 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN">
     </uses-permission>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
+        <uses-library android:name="com.google.android.maps" />
         <activity
             android:name=".Splash"
             android:label="@string/app_name" >
@@ -23,7 +25,7 @@
         </activity>
         <activity
             android:name=".OurMenu"
-            android:label="Izbornik" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="com.student.app.MENU" />
 
