--- a/Student4Life/AndroidManifest.xml
+++ b/Student4Life/AndroidManifest.xml
@@ -5,15 +5,17 @@
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="10" />
+
     <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN">
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" >
     </uses-permission>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <uses-library android:name="com.google.android.maps" />
+
         <activity
             android:name=".Splash"
             android:label="@string/app_name" >
@@ -32,7 +34,10 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Osijek"
+            android:label="@string/app_name" >
+        </activity>
     </application>
-
 
 </manifest>
